[gd_scene load_steps=74 format=2]

[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_017.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_015.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_003.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_000.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_005.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_004.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_012.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_014.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_005.png" type="Texture" id=9]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_007.png" type="Texture" id=10]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_002.png" type="Texture" id=11]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_010.png" type="Texture" id=12]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_006.png" type="Texture" id=13]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_001.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_002.png" type="Texture" id=15]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_001.png" type="Texture" id=16]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_002.png" type="Texture" id=17]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_009.png" type="Texture" id=18]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_010.png" type="Texture" id=19]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_009.png" type="Texture" id=20]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_003.png" type="Texture" id=21]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_001.png" type="Texture" id=22]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_006.png" type="Texture" id=23]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_011.png" type="Texture" id=24]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_005.png" type="Texture" id=25]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_004.png" type="Texture" id=26]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_013.png" type="Texture" id=27]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_000.png" type="Texture" id=28]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_006.png" type="Texture" id=29]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_010.png" type="Texture" id=30]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_008.png" type="Texture" id=31]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_008.png" type="Texture" id=32]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_009.png" type="Texture" id=33]
[ext_resource path="res://Assets/Enemies/TrashGolem/Running/0_Golem_Running_007.png" type="Texture" id=34]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_004.png" type="Texture" id=35]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_007.png" type="Texture" id=36]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_000.png" type="Texture" id=37]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_016.png" type="Texture" id=38]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_011.png" type="Texture" id=39]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_008.png" type="Texture" id=40]
[ext_resource path="res://Assets/Enemies/TrashGolem/Idle Blinking/0_Golem_Idle Blinking_011.png" type="Texture" id=41]
[ext_resource path="res://Assets/Enemies/TrashGolem/Slashing/0_Golem_Slashing_003.png" type="Texture" id=42]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_006.png" type="Texture" id=43]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_009.png" type="Texture" id=44]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_013.png" type="Texture" id=45]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_008.png" type="Texture" id=46]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_014.png" type="Texture" id=47]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_010.png" type="Texture" id=48]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_001.png" type="Texture" id=49]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_002.png" type="Texture" id=50]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_003.png" type="Texture" id=51]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_007.png" type="Texture" id=52]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_012.png" type="Texture" id=53]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_000.png" type="Texture" id=54]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_005.png" type="Texture" id=55]
[ext_resource path="res://Assets/Enemies/TrashGolem/Dying/0_Golem_Dying_011.png" type="Texture" id=56]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_008.png" type="Texture" id=57]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_011.png" type="Texture" id=58]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_000.png" type="Texture" id=59]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_002.png" type="Texture" id=60]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_006.png" type="Texture" id=61]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_005.png" type="Texture" id=62]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_004.png" type="Texture" id=63]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_010.png" type="Texture" id=64]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_009.png" type="Texture" id=65]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_007.png" type="Texture" id=66]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_003.png" type="Texture" id=67]
[ext_resource path="res://Assets/Enemies/TrashGolem/Hurt Golem/0_Golem_Hurt_001.png" type="Texture" id=68]
[ext_resource path="res://TrashGolem.gd" type="Script" id=69]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 18 ), ExtResource( 30 ), ExtResource( 24 ) ],
"loop": true,
"name": "Walk",
"speed": 18.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 40 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 41 ), ExtResource( 7 ), ExtResource( 27 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 38 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 68 ), ExtResource( 60 ), ExtResource( 67 ), ExtResource( 63 ), ExtResource( 62 ), ExtResource( 61 ), ExtResource( 66 ), ExtResource( 57 ), ExtResource( 65 ), ExtResource( 64 ), ExtResource( 58 ) ],
"loop": true,
"name": "Damaged",
"speed": 25.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 42 ), ExtResource( 35 ), ExtResource( 5 ), ExtResource( 23 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 19 ), ExtResource( 39 ) ],
"loop": true,
"name": "Attack",
"speed": 25.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 55 ), ExtResource( 43 ), ExtResource( 52 ), ExtResource( 46 ), ExtResource( 44 ), ExtResource( 48 ), ExtResource( 56 ), ExtResource( 53 ), ExtResource( 45 ), ExtResource( 47 ) ],
"loop": false,
"name": "Dead",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 11 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 11 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 10 )

[node name="TrashGolem" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 69 )

[node name="GolumSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -15 )
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 1 )
animation = "Damaged"

[node name="GroundCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 2 )

[node name="GolemHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="GolemHitboxCollider" type="CollisionShape2D" parent="GolemHitbox"]
position = Vector2( 0, -13 )
shape = SubResource( 3 )

[node name="AttackArea" type="Area2D" parent="." groups=[
"golem_attack",
]]
collision_layer = 8

[node name="AttackAreaCollider" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 14, -12 )
shape = SubResource( 4 )
disabled = true

[node name="FindRayRight" type="RayCast2D" parent="."]
position = Vector2( 0, -18 )
enabled = true
cast_to = Vector2( 400, 0 )

[node name="FindRayLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -18 )
enabled = true
cast_to = Vector2( -400, 0 )

[node name="AttackRay" type="RayCast2D" parent="."]
position = Vector2( 0, -18 )
enabled = true
cast_to = Vector2( 12, 0 )
[connection signal="animation_finished" from="GolumSprite" to="." method="_on_GolumSprite_animation_finished"]
[connection signal="area_entered" from="GolemHitbox" to="." method="_on_GolemHitbox_area_entered"]
